--- a/src/components/Calendar.module.scss
+++ b/src/components/Calendar.module.scss
@@ -1,7 +1,7 @@
 /* 全体のカレンダーコンテナ */
 .calendar {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   gap: 1px; /* セル間のスペース */
   background-color: #ccc;
   width: 100svw;
@@ -15,7 +15,7 @@
 /* 各日の列 */
 .day_column {
   display: grid;
-  grid-template-rows: repeat(24, 40px); /* 1時間ごとに40pxの高さ */
+  grid-template-rows: repeat(25, 40px); /* 1時間ごとに40pxの高さ */
   background-color: #fff;
 }
 
@@ -65,6 +65,22 @@
       height: 1px;
       background-color: #2196f3;
       z-index: 1;
+    }
+  }
+
+  &.time_label {
+    cursor: default;
+    position: relative;
+    &::after {
+      display: none;
+    }
+    &:hover {
+      background-color: initial;
+    }
+    & p {
+      position: absolute;
+      top: -25%;
+      right: 4px;
     }
   }
 }
