--- a/src/components/Calendar.module.scss
+++ b/src/components/Calendar.module.scss
@@ -23,14 +23,18 @@
 .time_cell {
   position: relative;
   cursor: pointer;
+  text-align: center;
 
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 1px;
-    background-color: #e0e0e0;
+  &.drawLine {
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #e0e0e0;
+    }
   }
 
   &:hover {
@@ -78,8 +82,9 @@
     }
     & p {
       position: absolute;
-      top: -25%;
+      top: 50%;
       right: 4px;
+      font-size: 12px;
     }
   }
 }
