update base design

--- a/src/components/Calendar.module.scss
+++ b/src/components/Calendar.module.scss
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(8, 1fr);
   gap: 1px; /* セル間のスペース */
   background-color: #ccc;
-  width: 100svw;
+  width: 100%;
   user-select: none;
   -webkit-user-drag: none;
   -khtml-user-select: none;
