--- a/src/components/domains/Calendar.module.scss
+++ b/src/components/domains/Calendar.module.scss
@@ -115,5 +115,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  z-index: 1;
+  z-index: 100;
+  &:hover {
+    background-color: #1d77c1;
+  }
 }
