--- a/src/components/common/button/DeleteButton.module.scss
+++ b/src/components/common/button/DeleteButton.module.scss
@@ -4,13 +4,13 @@
   align-items: center;
   border: none;
   border-radius: 4px;
-  padding: 4px 4px;
+  padding: 8px 8px;
   cursor: pointer;
   transition: background-color 0.3s;
-  background: #f5f5f5;
+  background: #ffe6e6;
   min-height: 32px;
   &:hover {
-    background: #ddd;
+    background: #ebd5d5;
   }
   &:disabled {
     & * {
