--- a/src/components/domains/CalendarConfigFormDialog.module.scss
+++ b/src/components/domains/CalendarConfigFormDialog.module.scss
@@ -18,10 +18,17 @@
     width: 100%;
     max-width: 300px;
   }
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
   &__actions {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 20px;
     width: 100%;
   }
