--- a/src/components/domains/CalendarConfigFormDialog.module.scss
+++ b/src/components/domains/CalendarConfigFormDialog.module.scss
@@ -9,7 +9,9 @@
   justify-content: center;
   align-items: center;
   &__content {
-    background: #f5f5f5;
+    background: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
