update dark mode

--- a/src/components/common/button/Button.module.scss
+++ b/src/components/common/button/Button.module.scss
@@ -7,9 +7,11 @@
   padding: 8px 8px;
   cursor: pointer;
   transition: background-color 0.3s;
-  background: #f5f5f5;
+  background: var(--background-paper);
+  border: 1px solid var(--divider);
+  color: var(--color-main);
   min-height: 32px;
   &:hover {
-    background: #ddd;
+    background: var(--divider);
   }
 }
