--- a/src/components/common/TextField.module.scss
+++ b/src/components/common/TextField.module.scss
@@ -7,7 +7,9 @@
   font-size: 20px;
   width: 100%;
   border-radius: 4px;
-  border: 1px solid #ddd;
+  border: 1px solid var(--divider);
+  background: var(--background-paper);
+  color: var(--color-main);
 }
 
 .InputError {
