--- a/src/components/domains/Calendar.module.scss
+++ b/src/components/domains/Calendar.module.scss
@@ -3,21 +3,21 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: #fff;
   z-index: 1000;
   user-select: none;
   -webkit-user-drag: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -moz-user-drag: none;
+  background-color: var(--background-paper);
 }
 
 /* 全体のカレンダーコンテナ */
 .calendar {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
+  background-color: var(--divider);
   gap: 1px; /* セル間のスペース */
-  background-color: #ccc;
   width: 100%;
   padding-top: 80px;
 }
@@ -25,7 +25,7 @@
 /* 各日の列 */
 .day_column {
   display: grid;
-  background-color: #fff;
+  background-color: var(--background-paper);
 }
 
 /* 各時間のセル */
@@ -42,12 +42,12 @@
       left: 0;
       width: 100%;
       height: 1px;
-      background-color: #e0e0e0;
+      background-color: var(--divider);
     }
   }
 
   &:hover {
-    background-color: #f0f0f0;
+    background-color: var(--divider);
   }
   &.selected {
     &:hover {
@@ -94,6 +94,7 @@
       top: -9px;
       right: 4px;
       font-size: 12px;
+      color: var(--color-secondary);
     }
   }
 }
@@ -105,7 +106,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #2196f3;
+  background-color: var(--color-primary);
   width: 90%;
   color: #fff;
   padding: 5px;
@@ -117,6 +118,6 @@
   white-space: nowrap;
   z-index: 100;
   &:hover {
-    background-color: #1d77c1;
+    background-color: var(--color-primary-hover);
   }
 }
