--- a/src/components/domains/CalendarConfigFormDialog.module.scss
+++ b/src/components/domains/CalendarConfigFormDialog.module.scss
@@ -9,9 +9,9 @@
   justify-content: center;
   align-items: center;
   &__content {
-    background: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0px 4px 20px 1px rgba(0, 0, 0, 0.2);
+    background: var(--background-paper);
+    border: 1px solid var(--divider);
+    box-shadow: 0px 4px 20px 1px var(--divider);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,27 +33,5 @@
     justify-content: space-around;
     margin-top: 20px;
     width: 100%;
-  }
-
-  &__action {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    &:hover {
-      background-color: #f5f5f5;
-    }
-
-    &-primary {
-      background-color: #007bff;
-      color: #fff;
-    }
-
-    &-secondary {
-      background-color: #f5f5f5;
-    }
   }
 }
