--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   // Colors
   --color-main: #111;
   --color-primary: #007bff;
-  --color-primary-hover: #007bff;
+  --color-primary-hover: #2d92ff;
   --color-secondary: #6c757d;
   --color-success: #28a745;
   --color-info: #17a2b8;
