--- a/src/components/domains/CalendarBody.module.scss
+++ b/src/components/domains/CalendarBody.module.scss
@@ -39,6 +39,30 @@
       background-color: var(--color-primary-hover);
     }
   }
+  /* ドラッグで選択中のセルをハイライト */
+  & > .selectedItem {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.3); /* ハイライトの色 */
+    border: 1px solid #2196f3; /* ハイライトの境界線 */
+    user-select: none;
+    -webkit-user-drag: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -moz-user-drag: none;
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #2196f3;
+    }
+  }
 }
 
 /* 各時間のセル */
@@ -65,31 +89,6 @@
   &.selected {
     &:hover {
       background: initial;
-    }
-  }
-
-  /* ドラッグで選択中のセルをハイライト */
-  & .selected {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.3); /* ハイライトの色 */
-    border: 1px solid #2196f3; /* ハイライトの境界線 */
-    user-select: none;
-    -webkit-user-drag: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -moz-user-drag: none;
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: -2px;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: #2196f3;
     }
   }
 
