--- a/src/components/common/LoadingWithMessage.module.scss
+++ b/src/components/common/LoadingWithMessage.module.scss
@@ -12,7 +12,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
+    background: var(--divider);
     display: flex;
     align-items: flex-end;
     padding: 8px;
