--- a/src/components/common/button/DeleteButton.module.scss
+++ b/src/components/common/button/DeleteButton.module.scss
@@ -7,7 +7,7 @@
   padding: 8px 8px;
   cursor: pointer;
   transition: background-color 0.3s;
-  background: var(--color-danger);
+  background: var(--color-error);
   min-height: 32px;
   &:hover {
     background: #ebd5d5;
