--- a/src/index.scss
+++ b/src/index.scss
@@ -4,10 +4,10 @@
   --color-primary: #007bff;
   --color-primary-hover: #2d92ff;
   --color-secondary: #6c757d;
-  --color-success: #28a745;
+  --color-success: #63cd32;
   --color-info: #17a2b8;
   --color-warning: #ffc107;
-  --color-danger: #ffe6e6;
+  --color-error: #ffe6e6;
   --color-light: #f8f9fa;
   --color-dark: #343a40;
   --color-white: #fff;
@@ -41,10 +41,10 @@ a {
     --color-primary: #134692;
     --color-primary-hover: #2b5aa1;
     --color-secondary: #6c757d;
-    --color-success: #198754;
-    --color-info: #0dcaf0;
-    --color-warning: #ffc107;
-    --color-danger: #866668;
+    --color-success: #198766;
+    --color-info: #2e7887;
+    --color-warning: #947a2c;
+    --color-error: #875e61;
     --color-light: #f8f9fa;
     --color-dark: #343a40;
     --color-white: #fff;
