--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  object-fit: cover;
+}
+
 @media screen and (prefers-color-scheme: dark) {
   :root {
     // Colors
