--- a/src/components/domains/newCalendar/CalendarBodyMainRow.module.scss
+++ b/src/components/domains/newCalendar/CalendarBodyMainRow.module.scss
@@ -1,10 +1,8 @@
 .dayColumn {
-  background-color: var(--background-paper);
-  width: 100%;
-  position: relative;
-  border-left: 1px solid var(--divider);
-
   flex: 1;
+  width: 100%;
+  background-color: var(--background-paper);
+  position: relative;
   border-left: 1px solid var(--divider);
 }
 
@@ -29,7 +27,7 @@
   }
   &.selected {
     &:hover {
-      background: initial;
+      background-color: initial;
     }
   }
 }
