--- a/src/components/domains/newCalendar/CalendarBodyTopRow.module.scss
+++ b/src/components/domains/newCalendar/CalendarBodyTopRow.module.scss
@@ -1,3 +1,31 @@
+.dayColumn {
+  flex: 1;
+  width: 100%;
+  background-color: var(--background-paper);
+  border-left: 1px solid var(--divider);
+  cursor: pointer;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--divider);
+  }
+
+  &:hover {
+    background-color: var(--divider);
+  }
+  &.selected {
+    &:hover {
+      background-color: initial;
+    }
+  }
+}
+
 .selectedItem {
   position: absolute;
   top: 0;
@@ -12,6 +40,7 @@
   -khtml-user-select: none;
   -moz-user-select: none;
   -moz-user-drag: none;
+  z-index: 1;
   &::after {
     content: '';
     position: absolute;
