--- a/src/components/domains/newCalendar/CalendarBodyTopRow.module.scss
+++ b/src/components/domains/newCalendar/CalendarBodyTopRow.module.scss
@@ -53,6 +53,7 @@
 }
 
 .calendarEvent {
+  position: absolute;
   width: 90%;
   background-color: var(--color-primary);
   color: #fff;
@@ -60,7 +61,6 @@
   border-radius: 4px;
   font-size: 12px;
   text-align: center;
-  overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   z-index: 100;
