--- a/src/components/domains/newCalendar/CalendarDetailEditMenu.module.scss
+++ b/src/components/domains/newCalendar/CalendarDetailEditMenu.module.scss
@@ -8,20 +8,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   &__content {
     position: absolute;
     background: var(--background-paper);
     border: 1px solid var(--divider);
     box-shadow: 0px 4px 20px 1px var(--divider);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+    padding: 12px;
+    margin: 12px;
     width: 100%;
     max-width: 300px;
+    max-height: 100%;
     z-index: 100;
+    overflow: scroll;
   }
+
   &__header {
     display: flex;
     justify-content: space-between;
