--- a/src/components/domains/newCalendar/CalendarBodyMainRow.module.scss
+++ b/src/components/domains/newCalendar/CalendarBodyMainRow.module.scss
@@ -54,6 +54,17 @@
     opacity: 0.2;
     z-index: -1;
   }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 8px;
+    z-index: -1;
+    cursor: ns-resize;
+  }
 }
 
 @media screen and (prefers-color-scheme: dark) {
